# quantflow

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: design-decisions.md  roadmap.md
examples/: 01_quickstart.py  02_backtest_strategy.py  03_train_rl_agent.py  04_advanced_indicators.py
quantflow/: __init__.py
quantflow/core/: __init__.py  config.py  pipeline.py  registry.py
quantflow/data/: __init__.py  loaders.py  preprocessing.py
quantflow/evaluation/: __init__.py  backtesting.py  metrics.py  risk.py
quantflow/execution/: __init__.py  broker.py  orders.py
quantflow/features/: __init__.py  fractal.py  indicators.py  microstructure.py  pipeline.py  regime.py  timeseries.py
quantflow/models/: __init__.py  base.py
quantflow/rl/: __init__.py  rewards.py
quantflow/rl/agents/: __init__.py  ppo_agent.py
quantflow/rl/envs/: __init__.py  trading_env.py
quantflow/utils/: __init__.py  logging.py
tests/: test_advanced_indicators.py  test_backtest.py  test_indicators.py  test_metrics.py  test_pipeline.py
