[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantflow"
version = "0.1.0"
description = "Modular ML/RL library for financial markets, extensible to robotics, supply chain, and recommender systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "QuantFlow contributors" }]
keywords = ["machine-learning", "reinforcement-learning", "finance", "trading", "backtesting", "time-series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
deep = ["torch>=2.1"]
rl   = ["gymnasium>=0.29", "stable-baselines3>=2.2"]
fast = ["numba>=0.58", "polars>=0.20"]
viz  = ["matplotlib>=3.7", "plotly>=5.17"]
dev  = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.1.6",
    "mypy>=1.7",
]
all  = ["quantflow[deep,rl,fast,viz]"]

[project.urls]
Homepage = "https://github.com/quantflow/quantflow"
Documentation = "https://github.com/quantflow/quantflow/blob/main/ARCHITECTURE.md"
Issues = "https://github.com/quantflow/quantflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["quantflow*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
